...
        case 9:  SnakePlantShape()
        case 10: FiddleLeafShape()
        case 11: AloeShape()
        case 12: RoseShape()
        case 13: DaisyShape()
        case 14: CherryBlossomShape()
        case 15: PalmShape()
        case 16: PineShape()
        case 17: OrchidShape()
        case 18: BasilShape()
        case 19: LilyShape()
        case 20: DandelionShape()
        default: OakShape()
...
